--- a/4-ts-oop-components/package.json
+++ b/4-ts-oop-components/package.json
@@ -1,16 +1,36 @@
 {
-  "name": "4-ts-oop-components",
+  "name": "ts-oop-components",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+  },
+  "dependencies": {
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10",
-    "vitest": "^2.1.5"
-  }
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.8",
+    "vitest": "^1.0.4"
+  },
+  "description": "TypeScript OOP Components with Tailwind CSS",
+  "keywords": [
+    "typescript",
+    "oop",
+    "components",
+    "tailwind"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
